--- a/doc.Qmd
+++ b/doc.Qmd
@@ -229,19 +229,17 @@ summary(a)
 
 L'AIC risultante dal modello sviluppato dalla funzione stepAIC è 429.63 con variabili considerate finali $$\text{mort} \sim \text{prec} + \text{jant} + \text{jult} + \text{ovr65} + \text{popn} + \text{educ} + \text{nonw} + \text{hc} + \text{nox}$$
 
-Considerando le variabili prec, popn, educ, hous, nonw, poor e so2, che, dall'analisi bivariata sono quelle che sembrano essere più correlate alla variabile mort, creiamo il nostro primo modelllo.
+Considerando le variabili prec, popn, educ, hous, nonw, poor e log(nox), che, dall'analisi bivariata sono quelle che sembrano essere più correlate alla variabile mort, creiamo il nostro primo modelllo.
 
 ```{r}
-mod1 <- lm(mort ~ prec + popn + educ + hous + nonw + poor + so2, data = Pollution)
+mod1 <- lm(mort ~ prec + popn + educ + hous + nonw + poor + log(nox), data = Pollution)
 summary(mod1)
-AIC(mod1)
+AIC(mod1)                        
 ```
 
-Si nota che questo modello ha un Adjusted R-squared di 0.6656 e l'AIC di 609.6126
+Si nota che questo modello ha un Adjusted R-squared di 0.6752 e l'AIC di 607.8757
 
 Andando a vedere i p-value, si vede che quello della variabile popn è molto alto e si decide quindi di togliere questa variabile dal modello.
-
-Guardando alla correlazione delle variabili, scegliamo di sostituire so2 con log(nox).
 
 Ed inoltre aggiungiamo wwdrk\*educ, in quanto sono abbastanza correlate tra di loro.
 
