--- a/doc.Qmd
+++ b/doc.Qmd
@@ -1,9 +1,14 @@
 ---
-title: "Progetto DA"
-format: html
+title: "Progetto DA - gruppo E"
+#format: html
 #format: pdf
 editor: visual
 date: "`r Sys.Date()`"
+author: "Dariol Emma, Imbalzano Elisabeth, Riccio Riccardo, Severi Matteo"
+output:
+  html_document:
+    toc: true
+    theme: united
 ---
 
 ```{r setup, include=FALSE}
@@ -22,9 +27,9 @@ L'analisi che si vuole effettuare concerne un dataset che descrive dati riguarda
 
 Il dataset deriva da una rivista trimestrale di Statistica per le Scienze Fisiche, Chimiche e Ingegneristiche che viene pubblicata dall'*American Society for Quality* e dall'*American Statistical Association*, denominata *Technometrics*.
 
-Più precisamente nel vol. 15 (463-482), in un articolo intitolato "*Instabilities of regression estimates relating air pollution to mortality*" che ha come autori McDonald G.C. and Schwing R.C. nel 1973.
+Più precisamente si trova nel vol. 15 (463-482), redatto nel 1973, in un articolo intitolato "*Instabilities of regression estimates relating air pollution to mortality*" che ha come autori McDonald G.C. and Schwing R.C.
 
-L'obiettivo della presente analisi vuoleè quello di sviscerare le relazioni che sono presenti tra le variabili ambientali e la variabile target del tasso di mortalità per concludere con lo sviluppo di un modello predittivo per la variabile output (mort).
+L'obiettivo della presente analisi è quello di sviscerare le relazioni che sono presenti tra le variabili ambientali/sociali e la variabile target del tasso di mortalità e di sviluppare inoltre un modello predittivo per la variabile output (mort).
 
 ### Descrizione delle variabili presenti
 
@@ -38,9 +43,9 @@ Le variabili all'interno del dataset proposto sono 16
 
 -   OVR65 ➜ % della popolazione SMSA (standard metropolitan statistical area) del 1960 di età pari o superiore a 65 anni
 
--   POPN ➜ Dimensione media della famiglia
+-   POPN ➜ Numero di componenti medio per nucleo familiare
 
--   EDUC ➜ Anni scolastici medi completati da coloro che hanno più di 22 anni
+-   EDUC ➜ Numero di anni scolastici medio completati da coloro che hanno più di 22 anni
 
 -   HOUS ➜ % di unità abitative integre e dotate di tutti i servizi
 
@@ -52,13 +57,13 @@ Le variabili all'interno del dataset proposto sono 16
 
 -   POOR ➜ % di famiglie con reddito \< \$ 3000
 
--   HC ➜ Potenziale di inquinamento relativo da idrocarburi
+-   HC ➜ Potenziale relativo di inquinamento da idrocarburi
 
--   NOX ➜ Potenziale di inquinamento relativo agli ossidi di azoto
+-   NOX ➜ Potenziale relativo di inquinamento da ossidi di azoto
 
--   SO2 ➜ Potenziale di inquinamento relativo all'anidride solforosa
+-   SO2 ➜ Potenziale relativo di inquinamento da anidride solforosa
 
--   HUMID ➜ Umidità relativa media annua % alle ore 13:00
+-   HUMID ➜ % di umidità relativa media annua alle ore 13:00
 
 -   MORT ➜ Tasso di mortalità totale corretto per età per 100.000 (abitanti)
 
@@ -262,7 +267,7 @@ summary(a)
 
 L'indice $R^2$ del modello è pari a 71.39%
 
-L'AIC risultante è di 429.63, con variabili considerate finali $$\text{mort} = \text{prec} + \text{jant} + \text{jult} + \text{ovr65} + \text{popn} + \text{educ} + \text{nonw} + \text{hc} + \text{nox}$$
+L'AIC risultante è di 429.63, con variabili considerate finali $$\text{mort} \sim  \beta_0+ \beta_1\cdot \text{prec} + \beta_2\cdot \text{jant} + \beta_3\cdot\text{jult} + \beta_4\cdot\text{ovr65} + \beta_5\cdot\text{popn} + \beta_6\cdot \text{educ} + \beta_7\cdot \text{nonw} + \beta_8\cdot \text{hc} + \beta_9\cdot\text{nox}$$
 
 ### Primo modello
 
@@ -278,7 +283,7 @@ Si nota che questo modello ha un Adjusted R-squared di 67.41% e l'AIC di 608.9.
 
 Andando a vedere i p-value, si vede che quello delle variabili *popn* e *log(so2)* è molto alto e si decide quindi di toglierle dal modello.
 
-Ed inoltre aggiungiamo wwdrk\*educ, in quanto sono abbastanza correlate tra di loro.
+Ed inoltre aggiungiamo $\text{wwdrk}*\text{educ}$ , in quanto sono abbastanza correlate tra di loro.
 
 ```{r}
 mod2 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + wwdrk*educ, data = Pollution)
@@ -286,9 +291,9 @@ summary(mod2)
 AIC(mod2)
 ```
 
-In questo modo l'Adjusted R-squared è arrivato a 0.6825 e l'AIC a 607.333
+In questo modo l'Adjusted R-squared è arrivato a 0.6825 e l'AIC a 607.333.
 
-Ma notiamo che probabilmente wwdrk\*educ non aggiunge molto al nostro modello, quindi lo togliamo.
+Ma notiamo che probabilmente $\text{wwdrk}*\text{educ}$ non aggiunge molto al nostro modello, quindi lo togliamo.
 
 Sempre guardando la correlazione, proviamo ad aggiungere $\text{hous}*\text{educ}$, $\text{poor}*\text{nonw}$ , $\text{poor}*\text{hous}$ e $\text{ovr65}*\text{nonw}$ che sono quelli con più correlazione
 
@@ -298,9 +303,9 @@ summary(mod3)
 AIC(mod3)
 ```
 
-Ma guardando ai p-value, vediamo che $\text{educ}*\text{hous}$ va bene, $\text{poor}*\text{nonw}$ va bene ma può essere migliorato, mentre $\text{poor}*\text{hous}$ e $\text{ovr65}*\text{nonw}$ possono essere eliminati tranquillamente.
+Ma guardando i p-value, osserviamo che $\text{educ}*\text{hous}$ contribuisce, come anche $\text{poor}*\text{nonw}$ ma potrebbe essere migliorato, mentre $\text{poor}*\text{hous}$ e $\text{ovr65}*\text{nonw}$ , presentano valori del p-value elevati e dunque non apportando alcuna modifica sostanziale, si decide di eliminarli.
 
-Per migliorare $\text{poor}*\text{nonw}$ proviamo ad aggiungere la variabile $\text{educ}$ , in quanto ha senso considerarle assieme
+Per migliorare $\text{poor}*\text{nonw}$ proviamo ad aggiungere la variabile $\text{educ}$ sotto l'ipotesi che la variabile $\text{poor}$ potrebbe incidere sugli anni di studio:
 
 ```{r}
 mod4 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + hous*educ + poor*nonw*educ, data = Pollution)
@@ -308,9 +313,9 @@ summary(mod4)
 AIC(mod4)
 ```
 
-Otteniamo così un modello con l'Adjusted R-squared di 80.98% e l'AIC di 578.9574
+Otteniamo così un modello con l'Adjusted R-squared di 80.98% e l'AIC di 578.9574.
 
-$$ mort = prec + log(nox) + educ*hous + educ*nonw*poor $$
+$$ \text{mort} \sim \beta_0 + \beta_1\cdot \text{prec} + \beta_2\cdot\text{educ}+ \beta_3\cdot\text{hous}+\beta_4\cdot\text{nonw}+\beta_5\cdot\text{poor}+\beta_6\cdot \log(\text{nox}) + \beta_7\cdot\text{educ}*\text{hous} +  \beta_8\cdot\text{nonw}*\text{poor} +  \beta_9\cdot\text{educ}*\text{poor} +  \beta_{10}\cdot\text{educ}*\text{nonw}+\beta_{11}\cdot\text{educ}*\text{nonw}*\text{poor} $$
 
 #### Primo modello senza osservazione 37
 
@@ -325,6 +330,8 @@ AIC(mod5)
 ```
 
 Si vede che il valore dell'indice $R^2$-adjusted (80.01) è rimasto pressochè invariato, mentre è sceso abbastanza il modulo dell'AIC che risulta ora essere pari a 565.76, e dunque migliore.
+
+$$ \text{mort} \sim \beta_0 + \beta_1\cdot \text{prec} + \beta_2\cdot\text{educ}+ \beta_3\cdot\text{hous}+\beta_4\cdot\text{nonw}+\beta_5\cdot\text{poor}+\beta_6\cdot \log(\text{nox}) + \beta_7\cdot\text{educ}*\text{hous} +  \beta_8\cdot\text{nonw}*\text{poor} +  \beta_9\cdot\text{educ}*\text{poor} +  \beta_{10}\cdot\text{educ}*\text{nonw}+\beta_{11}\cdot\text{educ}*\text{nonw}*\text{poor} $$
 
 ### Secondo modello
 
@@ -342,7 +349,19 @@ AIC(regmulti1)
 
 Questo modello ha un indice $R^2=81,19\%$ che è sicuramente sufficientemente elevato per poter essere considerato un buon modello. L'AIC corrispondente è di 581.7, che è un valore comunque accettabile.
 
+$$ \text{mort} \sim \beta_0 + \beta_1\cdot \text{educ}+ \beta_2\cdot \text{nonw} + \beta_3\cdot \text{poor} + \beta_4\cdot \text{prec} + \beta_5\cdot \log(\text{nox}) +\beta_6\cdot \log(\text{so2})  +  $$
+
+$$
++ \beta_7\cdot \text{hous}  + \beta_8\cdot \text{prec}*\log(\text{nox})+\beta_9\cdot \text{prec}*\log(\text{so2})+ \beta_{10}\cdot \log(\text{nox})*\log(\text{so2})+ 
+$$ $$+ \beta_{11}\cdot \text{educ}*\text{poor} + \beta_{12}\cdot \text{educ}*\text{nonw} + \beta_{13}\cdot \text{nonw}*\text{poor} + \beta_{14}\cdot \text{educ}*\text{hous} +  $$
+
+$$
++ \beta_{15}\cdot \text{prec}*\log(\text{nox})*\log(\text{so2}) +  \beta_{16}\cdot \text{educ}*\text{nonw}*\text{poor}
+$$
+
 Nonostante si possa reputare una buona supposizione, il modello non sembra confermarla, o meglio, sembra essercene uno migliore, che è quello visto in precedenza.
+
+#### Secondo modello senza 37 
 
 Si prova ora a cambiare il dataset utilizzando quello senza l'osservazione numero 37, mantenendo però il modello appena creato:
 
@@ -356,6 +375,8 @@ AIC(regmulti2)
 
 Seppur il valore dell'AIC scenda (571.2), il modulo di $R^2$ diminuisce (79.01%). Sembra dunque che il modello sia "*peggiorato*".
 
+#### Secondo modello StepAIC senza 37
+
 Si applica dunque la funzione stepAIC al modello *regmulti2* appena formulato, per vedere se in realtà ne è ancora migliorabile la stima
 
 ```{r}
@@ -365,3 +386,38 @@ AIC(regmultiAIC)
 ```
 
 È aumentato leggermente l' $R^2$ che ora risulta essere pari all'80.65% e l'AIC è sceso a 562.3, che è un valore leggermente migliore rispetto a quello ottenuto con il modello *mod5* .
+
+$$
+\text{mort} \sim \beta_0 + \beta_1\cdot \text{educ}+ \beta_2\cdot \text{nonw} + \beta_3\cdot \text{poor} + \beta_4\cdot \text{prec} + \beta_5\cdot \log(\text{nox}) +\beta_6\cdot \log(\text{so2}) +
+$$
+
+$$ + \beta_7\cdot \text{hous}  + \beta_8\cdot \text{educ}*\text{poor} + \beta_9\cdot \text{nonw}*\text{poor} + \beta_{10}\cdot \text{educ}$$
+
+Tra tutti il migliore sembrerebbe essere l'ultimo modello proposto, che è stato ottenuto eliminando l'osservazione 37
+
+|           $$Modello$$            |      $$      
+                                     R^2-Adjusted 
+                                         $$       |   $$   
+                                                     AIC   
+                                                     $$    |
+|:--------------------------------:|:------------:|:------:|
+|    Modello StepAIC originale     |    71.39%    | 429.63 |
+|          Primo Modello           |    80.98%    | 578.96 |
+|      Primo Modello senza 37      |    80.01%    | 565.76 |
+|         Secondo Modello          |    81.19%    | 581.69 |
+|     Secondo Modello senza 37     |    79.01%    | 571.25 |
+| Secondo Modello StepAIC senza 37 |    80.65%    | 562.33 |
+
+: Tabella riassuntiva
+
+## Conclusione:
+
+La scelta del miglior modello dipende dall'obiettivo specifico:
+
+-   Se l'obiettivo è massimizzare la capacità del modello di spiegare la variabilità dei dati, il Secondo Modello è il migliore.
+
+-   Se l'obiettivo è minimizzare la complessità del modello mantenendo una buona qualità dell'adattamento (AIC), il Modello StepAIC originale è il migliore.
+
+In generale, una combinazione di entrambi i criteri è spesso considerata. Se si desidera un equilibrio tra un buon $R^2$ aggiustato e un basso AIC, si potrebbe considerare il Secondo Modello StepAIC senza 37, che ha un $R^2$ buon aggiustato (80.65%) e un AIC relativamente basso (562.33).
+
+Ovviamente si è consci che cìè un aumento della complessità del modello tra il primo primo proposto. Si vede anche che non è proporzionale la crescita dell' $R^2$ e dell'AIC. Per quanto dunque il modello trovato spieghi le variabili si può supporre anche che possa essere overfittato (un grande aumento dell'AIC deriva probabilmente dall'avere incluso molti parametri aggiuntivi), ovvero, spiega bene il presente dataset ma potrebbe non generalizzare bene nuovi dati,
