due righe sul secondo modello lungo

--- a/doc.Qmd
+++ b/doc.Qmd
@@ -339,7 +339,11 @@ AIC(mod5)
 
 Si vede che il valore dell'indice $R^2$-adjusted (80.01) è rimasto pressochè invariato, mentre è sceso abbastanza il modulo dell'AIC che risulta ora essere pari a 565.76, e dunque migliore.
 
-$$ \text{mort} \sim \beta_0 + \beta_1\cdot \text{prec} + \beta_2\cdot\text{educ}+ \beta_3\cdot\text{hous}+\beta_4\cdot\text{nonw}+\beta_5\cdot\text{poor}+\beta_6\cdot \log(\text{nox}) + \beta_7\cdot\text{educ}*\text{hous} +  \beta_8\cdot\text{nonw}*\text{poor} +  \beta_9\cdot\text{educ}*\text{poor} +  \beta_{10}\cdot\text{educ}*\text{nonw}+\beta_{11}\cdot\text{educ}*\text{nonw}*\text{poor} $$
+$$ \text{mort} \sim \beta_0 + \beta_1\cdot \text{prec} + \beta_2\cdot\text{educ}+ \beta_3\cdot\text{hous}+\beta_4\cdot\text{nonw}+\beta_5\cdot\text{poor}+\beta_6\cdot \log(\text{nox}) + \beta_7\cdot\text{educ}*\text{hous} +   $$
+
+$$
++ \beta_8\cdot\text{nonw}*\text{poor} +  \beta_9\cdot\text{educ}*\text{poor} +  \beta_{10}\cdot\text{educ}*\text{nonw}+\beta_{11}\cdot\text{educ}*\text{nonw}*\text{poor}
+$$
 
 ### Secondo modello
 
