--- a/doc.Qmd
+++ b/doc.Qmd
@@ -261,6 +261,9 @@ a <- stepAIC(lreg, direction = "both")
 
 ```{r}
 summary(a)
+par(mfrow = c(2, 2))
+plot(a, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 L'indice $R^2$ del modello è pari a 71.39%
@@ -278,7 +281,10 @@ Considerando le variabili *prec*, *popn*, *educ*, *hous*, *nonw*, *poor, log(so2
 ```{r}
 mod1 <- lm(mort ~ prec + popn + educ + hous + nonw + log(so2) + poor + log(nox), data = Pollution)
 summary(mod1)
-AIC(mod1)                        
+AIC(mod1)
+par(mfrow = c(2, 2))
+plot(mod1, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 Si nota che questo modello ha un Adjusted R-squared di 67.41% e l'AIC di 608.9.
@@ -291,6 +297,9 @@ Ed inoltre aggiungiamo $\text{wwdrk}*\text{educ}$ , in quanto sono abbastanza co
 mod2 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + wwdrk*educ, data = Pollution)
 summary(mod2)
 AIC(mod2)
+par(mfrow = c(2, 2))
+plot(mod2, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 In questo modo l'Adjusted R-squared è arrivato a 0.6825 e l'AIC a 607.333.
@@ -303,6 +312,9 @@ Sempre guardando la correlazione, proviamo ad aggiungere $\text{hous}*\text{educ
 mod3 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + hous*educ + poor*nonw + poor*hous + ovr65*nonw, data = Pollution)
 summary(mod3)
 AIC(mod3)
+par(mfrow = c(2, 2))
+plot(mod3, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 Ma guardando i p-value, osserviamo che $\text{educ}*\text{hous}$ contribuisce, come anche $\text{poor}*\text{nonw}$ ma potrebbe essere migliorato, mentre $\text{poor}*\text{hous}$ e $\text{ovr65}*\text{nonw}$ , presentano valori del p-value elevati e dunque non apportando alcuna modifica sostanziale, si decide di eliminarli.
@@ -313,6 +325,9 @@ Per migliorare $\text{poor}*\text{nonw}$ proviamo ad aggiungere la variabile $\t
 mod4 <- lm(mort ~ prec + educ + hous + nonw + poor + log(nox) + hous*educ + poor*nonw*educ, data = Pollution)
 summary(mod4)
 AIC(mod4)
+par(mfrow = c(2, 2))
+plot(mod4, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 Otteniamo così un modello con l'Adjusted R-squared di 80.98% e l'AIC di 578.9574.
@@ -333,6 +348,9 @@ Proviamo dunque a vedere se, considerando il nuovo dataset *senza37* e l'ultimo 
 mod5 <- lm(mort ~ prec + educ + hous + nonw + poor + log(so2)+ log(nox) + hous*educ + poor*nonw*educ, data = senza37)
 summary(mod5)
 AIC(mod5)
+par(mfrow = c(2, 2))
+plot(mod5, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 Si vede che il valore dell'indice $R^2$-adjusted (80.01) è rimasto pressochè invariato, mentre è sceso abbastanza il modulo dell'AIC che risulta ora essere pari a 565.76, e dunque migliore.
@@ -354,6 +372,9 @@ regmulti1 <- lm(mort ~ educ + nonw + poor + prec*log(nox)*log(so2) + educ*poor*n
 summary(regmulti1)
 
 AIC(regmulti1)
+par(mfrow = c(2, 2))
+plot(regmulti1, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 
 ```
 
@@ -380,7 +401,9 @@ regmulti2 <- lm(mort ~ educ + nonw + poor + prec*log(nox)*log(so2) + educ*poor*n
 summary(regmulti2)
 
 AIC(regmulti2)
-
+par(mfrow = c(2, 2))
+plot(regmulti2, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 Seppur il valore dell'AIC scenda (571.2), il modulo di $R^2$ diminuisce (79.01%). Sembra dunque che il modello sia "*peggiorato*".
@@ -393,6 +416,9 @@ Si applica dunque la funzione stepAIC al modello *regmulti2* appena formulato, p
 regmultiAIC <- stepAIC(regmulti2)
 summary(regmultiAIC)
 AIC(regmultiAIC)
+par(mfrow = c(2, 2))
+plot(regmultiAIC, which = c(1,2,4,5))
+par(mfrow = c(1, 1))
 ```
 
 È aumentato leggermente l' $R^2$ che ora risulta essere pari all'80.65% e l'AIC è sceso a 562.3, che è un valore leggermente migliore rispetto a quello ottenuto con il modello *mod5* .
